--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
   
   <div>
     <img src="https://images.unsplash.com/photo-1726137569914-ae2ad1c634f6?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDF8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwxfHx8ZW58MHx8fHx8" alt="Blobby's picture" />
-    <p>My name is Blossom Idoko and I am a girl with random thoughts.</p>
-    <p>I am from Nsukka but I don't know what to say next.</p>
+    <p>My name is __blank__ who knows and I am a hmmm with random thoughts.</p>
+    <p>I am from unknown but I don't know what to say next.</p>
   </div>
 </body>
 </html>
