--- a/germ.html
+++ b/germ.html
@@ -126,8 +126,8 @@
 
     <div class="content-container">
         <img src="https://images.unsplash.com/photo-1726137569914-ae2ad1c634f6?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDF8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwxfHx8ZW58MHx8fHx8" alt="A scenic view from Unsplash" />
-        <p>My name is Blossom Idoko and I am a girl with random thoughts.</p>
-        <p>I am from Nsukka but I don't know what to say next. Exploring the world of web design is quite exciting!</p>
+        <p>My name is __+ __ and I am a djd with random thoughts.</p>
+        <p>I am from ddjj but I don't know what to say next. Exploring the world of web design is quite exciting!</p>
     </div>
 </body>
 </html>
